samples/_failures_safe/1761166108_4bae30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1fdd766a.c: In function ‘main’:
./samples/SAFE/__tmp_1fdd766a.c:128:12: error: missing terminating " character
  128 |     printf("
      |            ^
./samples/SAFE/__tmp_1fdd766a.c:128:5: error: expected expression at end of input
  128 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_1fdd766a.c:128:5: error: expected declaration or statement at end of input
